--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -69,16 +69,16 @@ jobs:
         cd $WD
     - run: |
         ant clean dist
-        cd dist; zip -r ../algorithm-MyAlgorithm.zip *; cd ..
+        cd dist; zip -r ../algorithm-Sensitivity.zip *; cd ..
         ant install
-        zip -r FunzR-MyAlgorithm.zip FunzR-MyAlgorithm
+        zip -r FunzR-Sensitivity.zip FunzR-Sensitivity
     - uses: actions/upload-artifact@v2
       with:
         path: dist
     - uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: ./*-MyAlgorithm.zip
+        files: ./*-Sensitivity.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
