--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -22,7 +22,7 @@ jobs:
         java-package: jdk
     - uses: r-lib/actions/setup-r@v1
       with:
-        r-version: 3.6
+        r-version: 
     - if: matrix.os == 'macos-latest'
       run: |
         ln -s /Library/Frameworks/R.framework/Versions/3.6 /Library/Frameworks/R.framework/Versions/3.5
