--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -14,6 +14,8 @@ jobs:
         os: [ubuntu-latest, windows-latest, macOS-latest]
         java: [ 8 ]
     runs-on: ${{ matrix.os }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
@@ -22,11 +24,7 @@ jobs:
         java-package: jdk
     - uses: r-lib/actions/setup-r@v2
       with:
-        r-version: 
-    - if: matrix.os == 'macos-latest'
-      run: |
-        ln -s /Library/Frameworks/R.framework/Versions/3.6 /Library/Frameworks/R.framework/Versions/3.5
-        echo "/Library/Frameworks/R.framework/Resources/bin" >> $GITHUB_PATH
+        r-version: 4.2
     - uses: r-lib/actions/setup-pandoc@v1
     - run: |
         WD=$PWD
@@ -81,6 +79,3 @@ jobs:
         files: ./*-Sensitivity.zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-        
-        
